--- a/Cherry Pick/Cherry Pick.Windows/BasicPage1.xaml
+++ b/Cherry Pick/Cherry Pick.Windows/BasicPage1.xaml
@@ -11,8 +11,7 @@
     mc:Ignorable="d">
 
     <Page.Resources>
-        <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
-        <x:String x:Key="AppName">My Application</x:String>
+        <x:String x:Key="AppName">Cherrity Pick</x:String>
     </Page.Resources>
 
     <!--
